# Kubot_Sim_pkg

./: .gitignore  CMakeLists.txt  package.xml
config/: pd_gain.yaml
include/: footstep_planner.h  read_yaml.h
launch/: kubot.launch
model/kubot22/: CMakeLists.txt  model.config  model_0714.sdf  model_without_camera.sdf  package.xml
model/kubot22/config/: joint_names_kubot22.yaml
model/kubot22/launch/: display.launch  gazebo.launch
model/kubot22/meshes/: L_A_Link.STL  L_F_Link.STL  L_K_Link.STL  L_P_Link.STL  L_Pd_Link.STL  L_Pm_Link.STL  R_A_Link.STL  R_F_Link.STL  R_K_Link.STL  R_P_Link.STL  R_Pd_Link.STL  R_Pm_Link.STL  base_link.STL
model/kubot22/urdf/: kubot22.csv  kubot22.urdf  kubot22_ori.urdf  model_0708.sdf  model_ori.sdf
src/: footstep_planner.cpp  kubot_plugin.cc  read_yaml.cpp  rok3_plugin.cc
src/data_save_ola/: Gp.txt  zmp_and_com_data.txt  zmp_and_com_data_fast.txt  zmp_com_l_footup.txt
worlds/: kubot.world
